--- a/ice_recruitment.Rmd
+++ b/ice_recruitment.Rmd
@@ -55,8 +55,8 @@ efish_ice_anomaly <- merge(efish_wae_ice, anomaly, by = c("year")) %>%
          year_f = as.factor(year),
          average_anomaly_abs = abs(average_anomaly))
 
-five.years <- efish_ice_anomaly %>% group_by(DOW) %>% count() %>% dplyr::filter(n >= 3)
-efish_ice <- efish_ice_anomaly %>% dplyr::filter(DOW %in% five.years$DOW)
+three.years <- efish_ice_anomaly %>% group_by(DOW) %>% count() %>% dplyr::filter(n >= 3)
+efish_ice <- efish_ice_anomaly %>% dplyr::filter(DOW %in% three.years$DOW)
 ```
 
 
@@ -76,8 +76,6 @@ mean(num.per.year$n)
 
 # Wae recruitment ICE
 ## Uses non lake specific ice off anomalys (only year specific)
-
-### OPTIMIZED
 ```{r}
 gam.ice <- gam(catch ~ s(average_anomaly) + s(log_acres) + s(x, y) + s(julian_day_survey) +
                  s(DOW, bs = "re") + s(year_f, bs = "re") + offset(log(total_effort_1)), 
@@ -85,7 +83,8 @@ gam.ice <- gam(catch ~ s(average_anomaly) + s(log_acres) + s(x, y) + s(julian_da
                family = nb(),
                data = efish_ice)
 #write_rds(gam.ice, "./models/yoy_ice_gam.rds")
-#gam.ice <- readRDS("./models/yoy_ice_gam.rds")
+#
+gam.ice <- readRDS("./models/yoy_ice_gam.rds")
 appraise(gam.ice)
 gratia::draw(gam.ice)
 summary(gam.ice) # 41.1 % deviance explained
@@ -123,7 +122,7 @@ jd_smooth %>%
         axis.title = element_text(size = 18),
         plot.title = element_text(size = 23, hjust = 0.5, face = "bold"))
   
-ggsave("./figures/figure3.jpeg", height = 10, width = 12)
+#ggsave("./figures/figure3.jpeg", height = 10, width = 12)
 ```
 
 
@@ -135,10 +134,10 @@ efish_ice %>% select(total_effort_1, log_acres, julian_day_survey, x, y) %>%
       ~ mean(.x, na.rm = TRUE)))
 
 pred.df = data.frame(
-  average_anomaly = seq(-18, 16, by = 0.5),
+  average_anomaly = seq(-24.96848531, 18.6, by = 0.5),
   x = -94.7, y = 46.1,
   julian_day_survey = 266, log_acres = 7.5,
-  DOW = "56074701", year_f = 2011, total_effort_1 = 1.4) %>%
+  DOW = "56038300", year_f = 2011, total_effort_1 = 1.4) %>%
   mutate(row = row_number())
 
 fs <- fitted_samples(gam.ice, data = pred.df, n = 1000, seed = 1024,
@@ -151,8 +150,12 @@ fv <- fitted_values(gam.ice, data = pred.df, exclude = c('s(DOW)',  's(year_f)')
 
 fig <- fs %>%
   ggplot() +
-  geom_line(data = fv, aes(x = average_anomaly, y = fitted), size = 1.5) + 
-  geom_line(aes(x = average_anomaly, y = fitted, group = group), alpha = 0.01) + 
+  # Thick line (expected relationship)
+  geom_line(data = jd_smooth, aes(x = average_anomaly, y = est), lwd = 1.5) +
+  geom_ribbon(data = jd_smooth, aes(x = average_anomaly, y = est, ymin = lower_ci , ymax = upper_ci), 
+              alpha = 0.25) +
+  # Thin lines (draws)
+  geom_line(aes(x = average_anomaly, y = fitted, group = group), alpha = 0.01) +
   labs(x ="Ice-off Anomaly", y = "Fall Age-0 Walleye Catch") +
   theme_classic() +
   theme(axis.text.y = element_text(size = 16),
@@ -161,8 +164,7 @@ fig <- fs %>%
         axis.title.y = element_text(size = 18),
         legend.title = element_text(size = 16), 
         legend.text = element_text(size = 14)) + 
-  scale_x_continuous(breaks = c(-15, -10, -5, 0, 5, 10, 15))  + 
-  theme(plot.margin=grid::unit(c(0,0,0,25), "mm"))
+  scale_x_continuous(breaks = c(-15, -10, -5, 0, 5, 10, 15))
 fig
 #write_rds(fig, "./figures/fig3B.rds")
 # Figure 3B
@@ -308,7 +310,7 @@ gam.ice.lake.specific <- gam(catch ~ s(anomaly) + s(log_acres)  + s(julian_day_s
 
 appraise(gam.ice.lake.specific)
 gratia::draw(gam.ice.lake.specific)
-summary(gam.ice.lake.specific)
+summary(gam.ice.lake.specific) #38%
 k.check(gam.ice.lake.specific)
 
 
@@ -319,8 +321,6 @@ jd_smooth <- sm %>%
   add_constant(coef(gam.ice.lake.specific)["(Intercept)"]) %>% 
   mutate(upper_ci = upper_ci + coef(gam.ice.lake.specific)["(Intercept)"],
          lower_ci = lower_ci + coef(gam.ice.lake.specific)["(Intercept)"]) %>%
-  mutate(upper_ci = gam.ice.lake.specific$family$linkinv(upper_ci),
-         lower_ci = gam.ice.lake.specific$family$linkinv(lower_ci)) %>%
   transform_fun(inv_link(gam.ice.lake.specific))
   
 
