--- a/phyto_ice.Rmd
+++ b/phyto_ice.Rmd
@@ -8,15 +8,11 @@ date: "2024-02-02"
 library(tidyverse)
 library(lubridate)
 library(ggplot2)
-library(mnsentinellakes) #https://github.com/mnsentinellakes/mnsentinellakes
+library(mnsentinellakes)
 library(mgcv)
 library(gratia)
 library(readxl)
 library(cowplot)
-library(wiqid)
-
-#Creates a figure directory
-dir.create(file.path("./figures"))
 
 select <- dplyr::select
 
@@ -26,7 +22,7 @@ late.anomaly = 14
 
 # Read in semi cleaned data
 ````{r load in}
-phytodata.cleanish <- read.csv("./data/ramsey_county_phytoplankton.csv")
+phytodata.cleanish <- read.csv("./data/ramsey_county_phytoplankton.csv") 
 
 ice_off <- read.csv("./data/ice_off_summarized.csv") %>%
   mutate(DNRID = fixlakeid(DOW)) %>% 
@@ -59,38 +55,15 @@ temp <- merge( phytodata.cleanish, wb.ice, by = c("year")) %>%
   dplyr::filter(JULIANDAY > 60) %>%  
   dplyr::filter(JULIANDAY < 330) %>%
   mutate(ice_off_anomaly_s = scale(ice_off_anomaly),
-         JULIANDAY_s = scale(JULIANDAY))
+         JULIANDAY_s = scale(JULIANDAY)) 
 
-
-temp.long <- temp %>%
-  pivot_longer(ALL.CELLS:CHRYSOS, 
-               names_to = "phyto", values_to = "count") %>%
-  group_by(DNRID, year, phyto) %>%
-  ungroup() %>%
-  mutate(phyto = as.factor(phyto))
 ```
 
-# Random stuff to use later
-```{r}
-early.anomaly_s <- standardize2match(-17.52, temp$ice_off_anomaly)
-late.anomaly_s <- standardize2match(14, temp$ice_off_anomaly)
-
-jd_sd <- sd(temp$JULIANDAY)
-jd_mean <- mean(temp$JULIANDAY)
-
-sd <- sd(temp$ice_off_anomaly)
-mean <- mean(temp$ice_off_anomaly)
-
-
-undo_jd <- function(x){
-  return(x*jd_sd + jd_mean)
-}
-```
 
 
 # Amount of data 
 ```{r}
-hist(temp$year, breaks = 2023 - 1980)
+hist(temp$year, breaks = 2023-1980)
 length(unique(temp$DNRID))
 
 total = temp %>% group_by(year, DNRID) %>% count()
@@ -107,61 +80,69 @@ models <- list()
 
 for (i in 6:11) {
   
-  single.model <- gam(temp[,i] ~ s(ice_off_anomaly_s) + s(JULIANDAY_s) + 
-                      s(ice_off_anomaly_s, JULIANDAY_s) +
+  single.model <- gam(temp[,i] ~ s(ice_off_anomaly) + s(JULIANDAY) + 
+                      ti(ice_off_anomaly, JULIANDAY) +
                       s(DNRID, bs = "re") + s(year_f, bs = "re"),
                     method = "REML", select = T,
-                    data = temp, family = nb())
+                    data = temp, family = tw(link = "log"))
   
   print(paste0("Finished ", colnames(temp)[i]))
   models[[paste0(colnames(temp)[i])]] <- single.model
 }
 
-# Could be worse, some zero stripes (esp with "less common" taxa)
-#appraise(models$CYANOS)
-#appraise(models$GREEN)
-#appraise(models$DIATOM)
-#draw(models$DIATOM)
-#draw(models$DINOS)
-#appraise(models$DINOS)
-#appraise(models$CRYPTOS)
-#appraise(models$CHRYSOS)
 
+summary(models$CYANOS)
+summary(models$GREEN)
+summary(models$DIATOM)
+summary(models$DINOS)
+summary(models$CRYPTOS)
+summary(models$CHRYSOS)
 
-#write_rds(models, "./models/phyto.models_s.rds")
+appraise(models$CYANOS)
+appraise(models$GREEN)
+appraise(models$DIATOM)
+appraise(models$DINOS)
+appraise(models$CRYPTOS)
+appraise(models$CHRYSOS)
+
+k.check(models$CYANOS)
+k.check(models$GREEN)
+k.check(models$DIATOM)
+k.check(models$DINOS)
+k.check(models$CRYPTOS)
+k.check(models$CHRYSOS)
+
+#write_rds(models, "./models/phyto.models.rds")
 ```
 
 # Read in model DF
 ```{r}
-models <- read_rds("./models/phyto.models_s.rds")
+models <- read_rds("./models/phyto.models.rds")
 ```
 
 
+
 # Plot DOY change
+## Figure S8
 ```{r}
-start <- standardize2match(75, temp$JULIANDAY)
-end <- standardize2match(274, temp$JULIANDAY)
-
-
 hist(temp$JULIANDAY) # Approx 125-275 for peak sampling, look at 100 - 300
-quantile(temp$JULIANDAY_s, c(0.05, 0.95))
+quantile(temp$JULIANDAY, c(0.05, 0.95))
 hist(temp$ice_off_anomaly, breaks = 20)
 quantile(temp$ice_off_anomaly)
+# Thoughts to do - Change x-axis to Months
 
 plot.phyto.doy = function(model = NA, var.name = NA, type = "plot", slice = 1, y.label = NA, 
-                         early.anomaly_s = -0.9348572, late.anomaly_s = 1.579282, 
-                         start.date_s = start, end.date_s = end) {
+                         early.anomaly = -17.52, late.anomaly = 14, 
+                         start.date = 80, end.date = 274) {
   
   model <- models[[var.name]]
   # Year and DNRID aren't used but are required for predict.gam
-  length <- length(seq(90, 274, by = 1))
-  pred.df <- data.frame(
-                        ice_off_anomaly_s = c(rep(early.anomaly_s, length), rep(0, length), 
-                                            rep(late.anomaly_s, length)),
-                        ice_off_anomaly = c(rep(-17.52, length), rep(0, length), 
-                                            rep(14, length)),
-                        JULIANDAY_s = seq(start.date_s, end.date_s, length.out = length),
-                        JULIANDAY = seq(90, 274),
+  length <- length(seq(start.date, end.date, by = 1))
+  pred.df <- data.frame(ice_off_anomaly = c(rep(early.anomaly, length), rep(0, length), 
+                                            rep(late.anomaly, length)),
+                        JULIANDAY = seq(start.date, end.date, by = 1), 
+                        days_since_ice = seq(1, length),
+                        TOW = 2,
                         DNRID = "62001200", year_f = "1981") 
   
   fit <- predict.gam(model, pred.df,
@@ -177,17 +158,20 @@ plot.phyto.doy = function(model = NA, var.name = NA, type = "plot", slice = 1, y
       dplyr::select(axis.label) %>% as.character()
   
   pred.df %>%
-    mutate(ice_off_anomaly = as.factor(ice_off_anomaly_s),
-           ice_off_descriptor = ifelse(ice_off_anomaly_s == early.anomaly_s, 
+    mutate(ice_off_anomaly = as.factor(ice_off_anomaly),
+           ice_off_descriptor = ifelse(ice_off_anomaly == early.anomaly, 
                                        "Early", "Normal"),
-           ice_off_descriptor = ifelse(ice_off_anomaly_s == late.anomaly_s, 
-                                       "Late", ice_off_descriptor)) %>%
+           ice_off_descriptor = ifelse(ice_off_anomaly == late.anomaly, 
+                                       "Late", ice_off_descriptor),
+           ice_off_descriptor = factor(ice_off_descriptor, 
+                                       levels = c("Early", "Normal", "Late"))) %>%
     ggplot(aes(y = predictions, x = as.Date(JULIANDAY, origin = as.Date("2018-01-01")), 
                color = ice_off_anomaly)) +
     geom_line(aes(y = predictions, x = as.Date(JULIANDAY, origin = as.Date("2018-01-01")), 
                   color = ice_off_descriptor), lwd = 2) +
     theme_classic() +
-    scale_x_date(date_breaks = "months" , date_labels = "%b") + 
+    scale_x_date(date_breaks = "months" , date_labels = "%b") +
+    scale_color_manual(values = c("#FF0000", "#000000", "#0000FF")) +
     labs(y = paste0(y.label), x = "Julian Day", 
          color = "Ice-Off \nAnomaly", fill = "Ice-Off \nAnomaly") +
     theme(axis.text = element_text(size = 12),
@@ -199,6 +183,9 @@ species.labels <- data.frame(variable = names(models),
                           "Dinoflagellates\nDensity", "Cryptomonads\nDensity", 
                           "Chrysophytes\nDensity"))
 
+
+#all.cells.doy <- plot.phyto.doy(var.name = "ALL.CELLS") + theme(legend.position="none")
+#all.cells.doy
 cyanos.doy <- plot.phyto.doy(var.name = "CYANOS") + theme(legend.position="none")
 green.doy <- plot.phyto.doy(var.name = "GREEN") + theme(legend.position="none")
 diatom.doy <- plot.phyto.doy(var.name = "DIATOM") + theme(legend.position="none")
@@ -209,33 +196,21 @@ chrysos.doy <- plot.phyto.doy(var.name = "CHRYSOS")  +
 
 phyto <- plot_grid(cyanos.doy, green.doy, diatom.doy,
                             dinos.doy, cryptos.doy, chrysos.doy)
-
-title <- ggdraw() + 
-  draw_label(
-    "Effects of Anomalous Ice-Off on Phytoplankton Concentrations Over the Year",
-    fontface = 'bold', size = 23, x = 0, hjust = 0) +
-  theme(
-    plot.margin = margin(0, 0, 0, 7))
-
-plot_grid(
-  #title, 
-  phyto,
-  ncol = 1, rel_heights = c(0.1, 1)
-)
-ggsave("./figures/FigureS6.jpeg", height = 10, width = 12)
+phyto
+#Figure S8
+ggsave("./figures/FigureS8.jpeg", height = 10, width = 12)
 ```
 
-
 # Peak timing
+## Figure S1
 ```{r}
-toy.df <- data.frame(ice_off_anomaly_s = c(rep(early.anomaly_s, 221), rep(0, 221), 
-                                          rep(late.anomaly_s, 221)),
-                      JULIANDAY_s = seq(start, end, length.out = 221), 
+toy.df <- data.frame(ice_off_anomaly = c(rep(early.anomaly, 201), rep(0, 201), 
+                                          rep(late.anomaly, 201)),
+                      JULIANDAY = seq(80, 280, by = 1), 
                       DNRID = "82016700", year_f = "2000") %>%
-    mutate(row = row_number()) %>% 
-    mutate(ice_off_f =  ifelse(ice_off_anomaly_s == early.anomaly_s, "Early", "Normal"),
-           ice_off_f =  ifelse(ice_off_anomaly_s == late.anomaly_s, "Late", ice_off_f),
-           ice_off_f =  ifelse(ice_off_anomaly_s == 0, "Average", ice_off_f))
+    mutate(ice_off_f =  ifelse(ice_off_anomaly == early.anomaly, "Early", "Normal"),
+           ice_off_f =  ifelse(ice_off_anomaly == late.anomaly, "Late", ice_off_f),
+           ice_off_f =  ifelse(ice_off_anomaly == 0, "Average", ice_off_f))
 
 
 iters <- names(models)
@@ -254,43 +229,46 @@ pred.df = toy.df
 for (i in 1:length(iters)) {
   model = models[[iters[i]]]
   
-  # Use posterior dist of the mean to get posterior fitted values
-  sims <- fitted_samples(model, exclude = c('s(DNRID)',  's(year_f)'),
-                         newdata = pred.df, n = 1000, seed = 1024) |>
-  left_join(pred.df |> select(row, ice_off_anomaly_s, JULIANDAY_s, ice_off_f), 
-            by = join_by(row == row))
-  
-  if (iters[i] %in% c("GREEN", "DIATOM", "CRYPTOS", "CHRYSOS")) {
-    sims = sims %>% filter(JULIANDAY_s < -0.2974567)
+  if (iters[i] %in% c("GREEN", "DIATOM", "CRYPTOS", "CHRYSOS", "DINOS")) {
+    pred.df = pred.df %>% filter(JULIANDAY < 182)
   }
   
+  pred.df <- pred.df %>% mutate(row = row_number())
+  
+  # Use posterior dist of the mean to get posterior fitted values
+  sims <- fitted_samples(model, exclude = c('s(DNRID)',  's(year_f)'),
+                         data = pred.df, n = 1000, seed = 1024) |>
+  left_join(pred.df |> select(row, ice_off_anomaly, JULIANDAY, ice_off_f), 
+            by = join_by(row == row))
+  
+  
   # Get the peak timing when the ice off anomaly is big (ice-off happens late)
-  early <- sims %>% filter(ice_off_anomaly_s == early.anomaly_s) %>% 
+  early <- sims %>% filter(ice_off_anomaly == early.anomaly) %>% 
     group_by(draw) %>% slice_max(fitted)
-  early.quant <- quantile(early$JULIANDAY_s, probs = c(.025,.975))
-  early.quant.75 <- quantile(early$JULIANDAY_s, probs = c(.125, .875))
-  early.median <- median(early$JULIANDAY_s)
+  early.quant <- quantile(early$JULIANDAY, probs = c(.025,.975))
+  early.quant.75 <- quantile(early$JULIANDAY, probs = c(.125, .875))
+  early.median <- median(early$JULIANDAY)
 
   # Get the peak timing when the ice off anomaly is big (ice-off happens late)
-  late <- sims %>% filter(ice_off_anomaly_s == late.anomaly_s) %>% 
+  late <- sims %>% filter(ice_off_anomaly == late.anomaly) %>% 
     group_by(draw) %>% slice_max(fitted)
-  late.quant <- quantile(late$JULIANDAY_s, probs = c(.025,.975))
-  late.quant.75 <- quantile(late$JULIANDAY_s, probs = c(.125, .875))
-  late.median <- median(late$JULIANDAY_s)
+  late.quant <- quantile(late$JULIANDAY, probs = c(.025,.975))
+  late.quant.75 <- quantile(late$JULIANDAY, probs = c(.125, .875))
+  late.median <- median(late$JULIANDAY)
   
-  average <- sims %>% filter(ice_off_anomaly_s == 0) %>% 
+  average <- sims %>% filter(ice_off_anomaly == 0) %>% 
     group_by(draw) %>% slice_max(fitted)
-  average.quant <- quantile(average$JULIANDAY_s, probs = c(.025,.975))
-  average.quant.75 <- quantile(average$JULIANDAY_s, probs = c(.125, .875))
-  average.median <- median(average$JULIANDAY_s)
+  average.quant <- quantile(average$JULIANDAY, probs = c(.025,.975))
+  average.quant.75 <- quantile(average$JULIANDAY, probs = c(.125, .875))
+  average.median <- median(average$JULIANDAY)
   
   # Get the difference between peak timings
-  diff.early <- early$JULIANDAY_s - average$JULIANDAY_s
+  diff.early <- early$JULIANDAY - average$JULIANDAY
   diff.earlymedian <- median(diff.early)
   diff.earlyquant <- quantile(diff.early, probs = c(.025,.975))
   diff.earlyquant.75 <- quantile(diff.early, probs = c(.125, .875))
   
-  diff.late <- late$JULIANDAY_s - average$JULIANDAY_s
+  diff.late <- late$JULIANDAY - average$JULIANDAY
   diff.latemedian <- median(diff.late)
   diff.latequant <- quantile(diff.late, probs = c(.025,.975))
   diff.latequant.75 <- quantile(diff.late, probs = c(.125, .875))
@@ -341,7 +319,6 @@ timing.cis.plot$timing <- factor(timing.cis.plot$timing,
 
 timing.cis.plot %>%
   filter(!grepl("Difference", timing)) %>%
-  mutate(across(median:upper.75, undo_jd)) %>%
   ggplot() + 
   geom_point(aes(x = as.Date(median, origin = as.Date("2018-01-01")), y = -1*(numeric + jit), 
                  color = timing), size = 2) + 
@@ -350,7 +327,8 @@ timing.cis.plot %>%
                    xend = as.Date(upper.95, origin = as.Date("2018-01-01")), color = timing)) +
   geom_segment(aes(y = -1*(numeric + jit), yend = -1*(numeric + jit), 
                    x = as.Date(lower.75, origin = as.Date("2018-01-01")), 
-                   xend = as.Date(upper.75, origin = as.Date("2018-01-01")), color = timing), linewidth = 1.5) +
+                   xend = as.Date(upper.75, origin = as.Date("2018-01-01")), 
+                   color = timing), linewidth = 1.5) +
   #facet_grid(group ~., switch = "y") +
   theme_classic() +
   labs(y = "",
@@ -371,64 +349,161 @@ timing.cis.plot %>%
   scale_y_continuous(breaks = -1:-6, labels = levels(timing.cis.plot$axis.label)) +
   scale_x_date(date_labels = "%b")
   #scale_x_continuous(breaks = seq(100, 275, by = 25))
-
+  
 # Figure S1
 ggsave("./figures/FigureS1.jpeg", height = 8, width = 8)
 
-
-timing.cis.plot <- timing.cis.plot %>% 
-  mutate(across(median:upper.75, 
-                ~ if_else(row_number() %in% grep("Difference", timing), .*jd_sd, undo_jd(.))))
+#write.csv(timing.cis.plot, "./data/phyto_modeled_peak.csv", row.names = F)
+```
 
 
-write.csv(timing.cis.plot, "./data/phyto_modeled_peak.csv", row.names = F)
+# See if phytoplankton bloom size changes with ice-anomaly  
+## Figure S7
+```{r}
+species.labels <- data.frame(variable = names(models), 
+  axis.label = c("Cyanobacteria", "Green-Algae", 
+                 "Diatom", "Dinoflagellate", "Cryptomonad", 
+                 "Chrysophyte"))
+
+
+bloom.size <- timing.cis.plot %>% 
+  filter(!timing %in% c("Early Difference", "Late Difference")) %>% # filter out relative changes in timing
+  mutate(row = row_number(), 
+         ice_off_anomaly = ifelse(timing == "Early", early.anomaly, 0), 
+         ice_off_anomaly = ifelse(timing == "Late",  late.anomaly, ice_off_anomaly))
+
+bloom.size.plot <- data.frame(group = character(0), ice_off_anomaly = numeric(0),
+                     median = numeric(0), 
+                     q2.5 = numeric(0), q97.5 = numeric(0),
+                     q25 = numeric(0), q75 = numeric(0))
+
+groups = unique(bloom.size$group)
+
+for (i in 1:length(groups)) {
+  model = models[[groups[i]]]
+  
+  group.df <- bloom.size %>% filter(group == groups[i])
+  
+  pred.df <- data.frame(JULIANDAY = 
+                          c(
+                          seq(group.df$median[1] - 3, group.df$median[1] + 3, by = 1 ),
+                          seq(group.df$median[2] - 3, group.df$median[2] + 3, by = 1 ),
+                          seq(group.df$median[3] - 3, group.df$median[3] + 3, by = 1 )), 
+                        ice_off_anomaly = c(rep(group.df$ice_off_anomaly[1], 7),
+                                            rep(group.df$ice_off_anomaly[2], 7),
+                                            rep(group.df$ice_off_anomaly[3], 7)),
+                        DNRID = "82016700", year_f = "2000") %>% 
+    mutate(row = row_number()) 
+  
+  sims <- fitted_samples(model, exclude = c('s(DNRID)',  's(year_f)'),
+                         newdata = pred.df, n = 1000, seed = 1024) |>
+    left_join(pred.df |> select(row, ice_off_anomaly, JULIANDAY), 
+              by = join_by(row == row))
+  
+  
+  early.diff <- ((sims[sims$ice_off_anomaly == early.anomaly,]$fitted - 
+    sims[sims$ice_off_anomaly == 0,]$fitted) / 
+    sims[sims$ice_off_anomaly == 0,]$fitted) * 100
+  late.diff <- ((sims[sims$ice_off_anomaly == late.anomaly,]$fitted - 
+    sims[sims$ice_off_anomaly == 0,]$fitted) / 
+      sims[sims$ice_off_anomaly == 0,]$fitted) * 100
+  
+  temp_toadd <- data.frame(group = groups[i], 
+                     ice_off_anomaly = c("Early", "Late"),
+                     median = c(median(early.diff), median(late.diff)),
+                     q2.5 = c(quantile(early.diff, prob = c(0.025)),
+                              quantile(late.diff, prob = c(0.025))),
+                     q97.5 = c(quantile(early.diff, prob = c(0.975)),
+                              quantile(late.diff, prob = c(0.975))),
+                     q25 = c(quantile(early.diff, prob = c(0.75)),
+                              quantile(late.diff, prob = c(0.75))),
+                     q75 = c(quantile(early.diff, prob = c(0.25)),
+                              quantile(late.diff, prob = c(0.25))))
+  bloom.size.plot <- rbind(bloom.size.plot, temp_toadd)
+  
+}
+
+bloom.size.plot %>%
+  merge(species.labels, by.y = "variable", by.x = "group") %>%
+  ggplot() + 
+  geom_point(aes(y = median, x = ice_off_anomaly, color = ice_off_anomaly)) + 
+  geom_segment(aes(y = q2.5, yend = q97.5, x = ice_off_anomaly, 
+                   xend = ice_off_anomaly, color = ice_off_anomaly)) + 
+  geom_segment(aes(y = q25, yend = q75, x = ice_off_anomaly, 
+                   xend = ice_off_anomaly, color = ice_off_anomaly), 
+               linewidth = 1.5) +
+  geom_hline(yintercept = 0, linetype = 'dotted') +
+  facet_wrap(vars(axis.label), scales = "free") + 
+  scale_color_manual(values = c("#FF0000", "#000000",  "#0000FF")) + 
+  labs(y = "% Change in Abundance From Normal Ice-Off",
+       x = "Ice-Off Timing", color = "Ice-Off Timing") +
+  theme_classic() +
+  theme(legend.position = c(.45, .935)) 
+
+# Figure S7
+
+ggsave("./figures/FigureS6.jpeg", height = 8, width = 9)
 ```
 
 
 
-#### Graveyard - Not used in paper ###
-# I dont think it zeroes out REs
+
+# Graveyard - Not used in paper
+# All in one model
 ```{r}
-ds <- data_slice(models$CYANOS, var1 = "ice_off_anomaly_s")
+temp.long <- temp %>% 
+  pivot_longer(cols = CYANOS:CHRYSOS, 
+               names_to = "taxa", values_to = "values") %>%
+  mutate(taxa = as.factor(taxa))
+
+
+phyto_gam <- gam(values ~ 
+                   te(JULIANDAY, ice_off_anomaly, m = 2, bs = "tp") + 
+                   t2(JULIANDAY, ice_off_anomaly, taxa, m = 2, bs = c("tp", "tp", "re")) +
+                   s(taxa, DNRID, bs = "re") + s(taxa, year_f, bs = "re"), 
+                 method = "fREML", select = T,
+                 data = temp.long, family = nb())
+```
+
+# Another way to do the same plot
+## I dont think it zeroes out REs
+```{r}
+ds <- data_slice(models$CYANOS, var1 = "ice_off_anomaly")
 fv <- fitted_values(models$CYANOS, data = ds)
   
 fv |>
-  ggplot(aes(x = ice_off_anomaly_s, y = fitted)) +
+  ggplot(aes(x = ice_off_anomaly, y = fitted)) +
   geom_ribbon(aes(ymin = lower, ymax = upper), alpha = 0.2) +
   geom_line() + 
   ylim(0, max(fv$upper))
 ```
 
-
 # DOY change function - BAYESIAN
 ```{r}
-start <- standardize2match(75, temp$JULIANDAY)
-end <- standardize2match(274, temp$JULIANDAY)
-
-plot.phyto.doy.bayes = function(model = NA, var.name = NA, slice = 1, y.label = NA, 
-                         early.anomaly_s = -0.9348572, late.anomaly_s = 1.579282, 
-                         start.date_s = start, end.date_s = end) {
+plot.phyto.doy.bayes = function(model = NA, var.name = NA, type = "plot", slice = 1, y.label = NA, 
+                         early.anomaly = -15, late.anomaly = 15, start.date = 90, end.date = 280) {
   if (is.na(model)) {
     model <- models[[var.name]]
   }
   # Year and DNRID aren't used but are required for predict.gam
-  length <- length(seq(90, 274, by = 1))
-  pred.df <- data.frame(ice_off_anomaly_s = c(rep(early.anomaly_s, length), rep(0, length), 
-                                            rep(late.anomaly_s, length)),
-                        ice_off_anomaly = c(rep(-17.52, length), rep(0, length), 
-                                            rep(14, length)),
-                        JULIANDAY_s = seq(start.date_s, end.date_s, length.out = length),
-                        JULIANDAY = seq(90, 274),
-                        DNRID = "62001200", year_f = "1981") %>%
+  length <- length(seq(start.date, end.date, by = 1))
+  pred.df <- data.frame(ice_off_anomaly_abs = 
+                          c(rep(early.anomaly, length), rep(0, length), rep(late.anomaly, length)),
+                        ice_off_anomaly = 
+                          c(rep(early.anomaly, length), rep(0, length), rep(late.anomaly, length)),
+                        JULIANDAY = seq(start.date, end.date, by = 1), 
+                        days_since_ice = seq(1, length),
+                        towdepth = 10,
+                        DNRID = "62001200", year_f = "2000") %>%
     mutate(row = row_number()) %>% 
     mutate(
-           ice_off_f =  ifelse(ice_off_anomaly_s == early.anomaly_s, "Early", "Normal"),
-           ice_off_f =  ifelse(ice_off_anomaly_s == late.anomaly_s, "Late", ice_off_f))
+           ice_off_f =  ifelse(ice_off_anomaly == early.anomaly, "Early", "Normal"),
+           ice_off_f =  ifelse(ice_off_anomaly == late.anomaly, "Late", ice_off_f))
 
   fv <- fitted_values(model, data = pred.df, exclude = c('s(DNRID)',  's(year_f)'))
   fs <- fitted_samples(model, data = pred.df, n = 20, seed = 1024,
                        exclude = c('s(DNRID)',  's(year_f)')) |>
-    left_join(pred.df |> select(row, ice_off_anomaly_s, JULIANDAY_s), 
+    left_join(pred.df |> select(row, ice_off_anomaly, JULIANDAY), 
               by = join_by(row == row)) %>%
     drop_na()
   fit <- predict.gam(model, pred.df,
@@ -440,9 +515,14 @@ plot.phyto.doy.bayes = function(model = NA, var.name = NA, slice = 1, y.label = 
   pred.df$predictions = fit$fit
   pred.df$se = fit$se.fit
   
-  y.label <- species.labels %>% filter(variable == var.name) %>% 
+  if (type == "plot") {
+    y.label <- species.labels %>% filter(variable == var.name) %>% 
         select(axis.label) %>% as.character()
-  plot <- ggplot() +
+    plot <- ggplot() +
+      #geom_line(data = fs, 
+      #          aes(group = draw, 
+      #              x = as.Date(JULIANDAY, origin = as.Date("2018-01-01")),
+      #              y = fitted, colour = ice_off_f), alpha = 0.4) +
       geom_line(data = pred.df, aes(y = predictions, 
                     x = as.Date(JULIANDAY, origin = as.Date("2018-01-01")), 
                     color = ice_off_f), lwd = 2) +
@@ -459,33 +539,57 @@ plot.phyto.doy.bayes = function(model = NA, var.name = NA, slice = 1, y.label = 
         legend.title = element_text(size = 16), 
         legend.text = element_text(size = 16))
     
-  return(plot)
+    return(plot)
+  } # End plot if statement
+  
+  if (type == "max.date") {
+    max.date <- pred.df %>% group_by(ice_off_anomaly) %>% slice_max(predictions, n = slice) %>% 
+      mutate(zoop = var.name)
+    max.date$predictions <- predict(model, newdata = max.date, 
+                                    exclude = c("s(DNRID)", "s(year_f)"), 
+                                    type = "response")
+    max.date$se <- predict(model, newdata = max.date, exclude = c("s(DNRID)", "s(year_f)"), 
+                           type = "response", se.fit = T)$se.fit
+    
+    return(max.date)
+  } # End prediction if statement
 }
-```
 
+```
 
 # Plot DOY change - Bayesian
 ```{r}
 species.labels <- data.frame(variable = names(models), 
-           axis.label = c("Cyanobacteria\nDensity", 
+           axis.label = c("All Cells\nDensity (No./mL)", "Cyanobacteria\nDensity", 
                           "Green-algae\nDensity", "Diatoms\nDensity", 
                           "Dinoflagellates\nDensity", "Cryptomonads\nDensity", 
                           "Chrysophytes\nDensity"))
 
-cyanos.doy <- plot.phyto.doy.bayes(var.name = "CYANOS") + theme(legend.position= c(.3, .8))
+all.cells.doy <- plot.phyto.doy.bayes(var.name = "ALL.CELLS") + theme(legend.position="none")
+#all.cells.doy
+cyanos.doy <- plot.phyto.doy.bayes(var.name = "CYANOS") + theme(legend.position="none")
 green.doy <- plot.phyto.doy.bayes(var.name = "GREEN") + theme(legend.position="none")
 diatom.doy <- plot.phyto.doy.bayes(var.name = "DIATOM") + theme(legend.position="none")
 dinos.doy <- plot.phyto.doy.bayes(var.name = "DINOS") + theme(legend.position="none")
 cryptos.doy <- plot.phyto.doy.bayes(var.name = "CRYPTOS") + theme(legend.position="none")
 chrysos.doy <- plot.phyto.doy.bayes(var.name = "CHRYSOS") + theme(legend.position="none")
 
+legend.example <- plot.phyto.doy.bayes(var.name = "CHRYSOS")
+legend <- cowplot::get_legend(legend.example)
+legend
+phyto <- plot_grid(all.cells.doy, cyanos.doy, green.doy, diatom.doy,
+                            dinos.doy, cryptos.doy, chrysos.doy, legend)
 
-phyto <- plot_grid(cyanos.doy, green.doy, diatom.doy,
-                            dinos.doy, cryptos.doy, chrysos.doy)
+title <- ggdraw() + 
+  draw_label(
+    "Effects of Anomalous Ice-Off on Phytoplankton Concentrations Over the Year",
+    fontface = 'bold', size = 23, x = 0, hjust = 0) +
+  theme(
+    plot.margin = margin(0, 0, 0, 7))
 
 plot_grid(
-  phyto,
+  title, phyto,
   ncol = 1, rel_heights = c(0.1, 1)
 )
+#ggsave("./figures/all_phyto_doy.byaes.jpeg", height = 10, width = 12)
 ```
-
